[package]
name                   = "cssl-cgen-gpu-wgsl"
description            = "CSSLv3 stage0 — WebGPU Shading Language emitter via Tint shim"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
cssl-mir  = { path = "../cssl-mir" }
thiserror = { workspace = true }

[dev-dependencies]
# T11-D32 : validate emitted WGSL via naga's wgsl-in frontend.
naga = { workspace = true }
# § T11-D154 : pin transitive winapi-util via direct-dep so cargo enforces
# =0.1.10 and avoids dlltool.exe requirement (windows-sys 0.61.2). See
# workspace Cargo.toml [workspace.dependencies] block for full rationale.
winapi-util = { workspace = true }

[lints]
workspace = true
