[package]
name                   = "cssl-cgen-msl"
description            = "CSSLv3 stage0 — direct Metal Shading Language source-string emitter for LoA-v13 macOS/iOS GPU path"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
cssl-mir  = { path = "../cssl-mir" }
thiserror = { workspace = true }

[lints]
workspace = true
