[package]
name         = "cssl-consent"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
description  = "CSSLv3 consent-grade lattice : Denied/Implicit/Explicit/Revoked + ConsentScope (foundation crate per specs/Upgrade/impl/IMPL_02_FOUNDATION.csl)."
repository.workspace   = true

[dependencies]

[lints]
workspace = true
