[package]
name         = "cssl-effects-row"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
description  = "CSSLv3 Koka-style row-typed effects : labels + open/closed rows + discharge (foundation crate per specs/Upgrade/impl/IMPL_02_FOUNDATION.csl)."
repository.workspace   = true

[dependencies]
cssl-cas = { path = "../cssl-cas" }

[lints]
workspace = true
